[package]
name = "poe_client_watcher"
version = "0.1.0"
authors = ["Paul Seehofer <seehofer.paul@gmail.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "0.2.10"
lazy_static = "1.0.0"
env_logger = "0.5.6"
log = "0.4.1"
failure = "0.1.1"
serde = "1.0.35"
serde_derive = "1.0"
serde_json = "1.0"