[package]
name = "poe_client_watcher"
version = "0.1.0"
authors = ["Paul Seehofer <seehofer.paul@gmail.com>"]

[[bin]]
name = "client"
path = "src/client_main.rs"

[[bin]]
name = "server"
path = "src/server_main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "0.2.10"
lazy_static = "1.0.0"
env_logger = "0.5.6"
log = "0.4.1"
failure = "0.1.1"
serde = "1.0.35"
serde_derive = "1.0"
serde_json = "1.0"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.11.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
